# FireflySR-Alpha

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/ExcelOutput/: AvatarConfig.json  AvatarSkillTreeConfig.json  EquipmentConfig.json  ItemConfig.json  MapEntranceConfig.json  MazePlaneConfig.json  RelicConfig.json  RewardConfig.json  ShopConfig.json  TutorialConfig.json  TutorialGuideGroupConfig.json
assets/LevelOutput/RuntimeFloor/: P10000_F10000000.json  P10000_F10000002.json  P10001_F10001001.json  P10101_F10101001.json  P10101_F10101002.json  P10101_F10101003.json  P10101_F10101004.json  P10101_F10101005.json  P10101_F10101006.json  P10101_F10101007.json  P10101_F10101008.json  P10101_F10101009.json  P10102_F10102001.json  P10102_F10102002.json  P10102_F10102003.json  P10102_F10102004.json  P10201_F10201001.json  P10201_F10201002.json  P10202_F10202001.json  P10202_F10202002.json  P10202_F10202003.json  P10202_F10202004.json  P10301_F10301001.json  P10304_F10304001.json  P10305_F10305001.json  P10341_F10341001.json  P20001_F20001001.json  P20002_F20002001.json  P20003_F20003001.json  P20004_F20004001.json  P20100_F20100001.json  P20101_F20101001.json  P20111_F20111001.json  P20121_F20121001.json  P20122_F20122001.json  P20123_F20123001.json  P20131_F20131001.json  P20132_F20132001.json  P20133_F20133001.json  P20133_F20133002.json  (+314 more)
assets/LevelOutput/SharedRuntimeGroup/Groups_P10000_F10000000/: LevelGroup_P10000_F10000000_G1.json  LevelGroup_P10000_F10000000_G100.json  LevelGroup_P10000_F10000000_G101.json  LevelGroup_P10000_F10000000_G102.json  LevelGroup_P10000_F10000000_G103.json  LevelGroup_P10000_F10000000_G104.json  LevelGroup_P10000_F10000000_G105.json  LevelGroup_P10000_F10000000_G110.json  LevelGroup_P10000_F10000000_G111.json  LevelGroup_P10000_F10000000_G112.json  LevelGroup_P10000_F10000000_G113.json  LevelGroup_P10000_F10000000_G117.json  LevelGroup_P10000_F10000000_G119.json  LevelGroup_P10000_F10000000_G120.json  LevelGroup_P10000_F10000000_G122.json  LevelGroup_P10000_F10000000_G123.json  LevelGroup_P10000_F10000000_G124.json  LevelGroup_P10000_F10000000_G125.json  LevelGroup_P10000_F10000000_G127.json  LevelGroup_P10000_F10000000_G128.json  LevelGroup_P10000_F10000000_G131.json  LevelGroup_P10000_F10000000_G132.json  LevelGroup_P10000_F10000000_G133.json  LevelGroup_P10000_F10000000_G134.json  LevelGroup_P10000_F10000000_G135.json  LevelGroup_P10000_F10000000_G136.json  LevelGroup_P10000_F10000000_G137.json  LevelGroup_P10000_F10000000_G138.json  (+99 more)
common/: Cargo.toml
common/src/: config.rs  document.rs  lib.rs
common/src/data/: excels.rs  level.rs  mod.rs
dispatch/: Cargo.toml  dispatch.json
dispatch/src/: config.rs  handlers.rs  main.rs
gameserver/: Cargo.toml
gameserver/src/: config.rs  main.rs
gameserver/src/database/: combo_token.rs  mod.rs  player_collection.rs
gameserver/src/game/: context.rs  gameplay_config.rs  mod.rs  player_info.rs
gameserver/src/game/commands/: avatar.rs  mod.rs  relic.rs  reset.rs  scene.rs
gameserver/src/game/managers/: avatar.rs  battle.rs  challenge.rs  command.rs  hero_basic_type.rs  item.rs  lineup.rs  mod.rs  scene.rs  time.rs  tutorial.rs
gameserver/src/game/world/: group.rs  mod.rs
gameserver/src/game/world/entity/: actor.rs  mod.rs  monster.rs  npc.rs  prop.rs
gameserver/src/net/: gateway.rs  packet.rs  session.rs
gameserver/src/net/handlers/: archive.rs  authentication.rs  avatar.rs  battle.rs  challenge.rs  chat.rs  events.rs  friend.rs  interact.rs  item.rs  lineup.rs  map.rs  mission.rs  mod.rs  npc.rs  player.rs  rogue.rs  scene.rs  shop.rs  tutorial.rs
gameserver/src/util/: mod.rs  serialization.rs  time.rs
proto/: Cargo.toml  bin.server.proto  build.rs
proto/src/: cmd_types.rs  lib.rs
sdkserver/: Cargo.toml  sdkserver.json
sdkserver/html/: registration_page.html  registration_result.html
sdkserver/security/: sdk_private_key.der
sdkserver/src/: config.rs  main.rs  util.rs
sdkserver/src/database/: account_collection.rs  combo_token.rs  mod.rs
sdkserver/src/services/: granter.rs  mdk_shield.rs  mod.rs  reverse_proxy.rs  takumi_api.rs
sdkserver/src/services/pages/: mod.rs  register.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+12106 files in other folders)
