[workspace]
members = ["common", "dispatch", "gameserver", "proto", "sdkserver", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.81"
ansi_term = "0.12.1"
atomic_refcell = "0.1.13"
lazy_static = "1.4.0"

axum = { version = "0.7.4", features = ["macros"] }
axum-server = "0.6.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["normalize-path"] }
hyper = { version = "1.3.0", features = [ "client" ] }
hyper-util = { version = "0.1.3", features = [ "client-legacy" ] }

dirs = "5.0.1"
dotenv = "0.15.0"

env_logger = "0.11.3"

rbase64 = "2.0.3"
rand = "0.8.5"
regex = "1.10.4"
rsa = "0.9.6"

password-hash = { version = "0.5.0", features = ["alloc", "rand_core"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }

prost = "0.12.3"
prost-types = "0.12.3"
prost-build = "0.12.3"

paste = "1.0.14"
sysinfo = "0.30.7"
hex = "0.4.3"

mongodb = { version = "2.8.2", features = ["tokio-runtime"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tokio-stream = "0.1.15"

tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-log = { version = "0.2.0", features = ["std", "log-tracer"] }
tracing-subscriber = { version = "0.3.18", features = [
	"env-filter",
	"registry",
	"std",
	"tracing",
	"tracing-log",
] }
tracing-bunyan-formatter = "0.3.9"

common = { path = "common/" }
proto = { path = "proto/" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
