[package]
name = "dispatch"
edition = "2021"
version.workspace = true

[dependencies]
common.workspace = true

anyhow.workspace = true
env_logger.workspace = true

axum.workspace = true
axum-server.workspace = true

lazy_static.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
tokio-util.workspace = true

tracing.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true
ansi_term.workspace = true

prost.workspace = true
rbase64.workspace = true
proto.workspace = true
tower.workspace = true
tower-http.workspace = true
