[package]
name = "gameserver"
edition = "2021"
version.workspace = true

[dependencies]
common.workspace = true

ansi_term.workspace = true
anyhow.workspace = true
atomic_refcell.workspace = true
dirs.workspace = true
dotenv.workspace = true
env_logger.workspace = true
hex.workspace = true
lazy_static.workspace = true
paste.workspace = true
rand.workspace = true
rbase64.workspace = true
sysinfo.workspace = true

mongodb.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true

tracing.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true

prost.workspace = true
proto.workspace = true
