[package]
name = "sdkserver"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true

anyhow.workspace = true
env_logger.workspace = true

axum.workspace = true
axum-server.workspace = true
hyper.workspace = true
hyper-util.workspace = true

dirs.workspace = true
dotenv.workspace = true

password-hash.workspace = true
pbkdf2.workspace = true
rsa.workspace = true
rand.workspace = true
rbase64.workspace = true
regex.workspace = true
lazy_static.workspace = true

mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
tokio-util.workspace = true

tracing.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true
ansi_term.workspace = true

tower.workspace = true
tower-http.workspace = true

